Add LLM service and tool definitions for Confluence integration; update environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 CONFLUENCE_URL="https://your-domain.atlassian.net/wiki"
 CONFLUENCE_USER="your-email@example.com"
 CONFLUENCE_API_TOKEN="your_confluence_api_token"
-
-
+GOOGLE_API_KEY="your_google_api_key"
