Implement LLM integration with Gemini and OpenAI; add configuration and service layers

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
 CONFLUENCE_URL="https://your-domain.atlassian.net/wiki"
 CONFLUENCE_USER="your-email@example.com"
 CONFLUENCE_API_TOKEN="your_confluence_api_token"
-GOOGLE_API_KEY="your_google_api_key"
+
+# 사용할 LLM 프로바이더 ('gemini' 또는 'openai' 등)
+LLM_PROVIDER="gemini"
+
+GOOGLE_API_KEY="your_google_api_key_if_using_gemini"
+OPENAI_API_KEY="your_openai_api_key_if_using_openai"
